# Auto-scheduler-and-content-creator

./: .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT_CHECKLIST.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  TODO.md  alembic.ini  demo-frontend.html  demo.py  docker-compose.yml  fix_style.py  main.py  mypy.ini  prometheus.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  setup_solo.py  start.py
.cursor/rules/: instruc.mdc
.github/workflows/: basic.yml  ci.yml  deploy.yml
app/: __init__.py  cache_config.py  celeryconfig.py  config.py  main.py  tasks.py
app/api/: deps.py
app/core/: auth.py  config.py  database.py  logging_config.py  redis_config.py  scheduler.py  security.py  storage.py  twilio_service.py  twilio_test.py  worker.py
app/db/: session.py
app/models/: __init__.py  admin.py  associations.py  base.py  collaboration.py  content.py  enums.py  file.py  project.py  team.py  user.py  user_role.py
app/routers/: client_approval.py  collaboration.py  team.py
app/schemas/: admin.py  client_approval.py  collaboration.py  content.py  notification.py  team.py  token.py  user.py
app/services/: admin.py  email.py  notification.py  push.py
app/storage/: b2.py  base.py  manager.py  policy.py  s3.py
app/tests/: test_basic.py  test_config.py
backend/: .gitignore  Dockerfile  Dockerfile.admin  Makefile  README.md  docker-compose.yml  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/api/: generate-content.js
backend/app/: __init__.pyi  admin.py  main.py  models.py  py.typed
backend/scripts/: healthcheck.sh  init_db.py
backend/tests/: README.md  TEST_ANALYTICS.md  TEST_CORE_COMPONENTS.md  TEST_RESULTS.md  conftest.py  test_analytics.py  test_analytics_edge_cases.py  test_auth_service.py  test_content_generation.py  (+5 more)
config/: .env.example
docs/: COMPLETE_DOCUMENTATION.md  DEVELOPMENT.md  PROJECT_PLAN.md  QUICK_START.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  SETUP.md  TECHNICAL_PLAN.md  TECHNICAL_SPEC.md  ai_documentation.md  architecture.md  aws_infrastructure.md  beta_testing_strategy.md  content_features.md  frontend_architecture.md  phase1_checklist.md  setup_checklist.md  system_architecture.md  user_journey.md
frontend/: .env.example  .eslintrc.json  Dockerfile  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend-preview/: STYLE_GUIDE.md
migrations/: env.py
pgadmin/: config_distro.py  servers.json
pgadmin-config/: servers.json
scripts/: setup.sh  setup_aws_infrastructure.sh
supabase/: config.toml
(+111 files in other folders)
